src/ui/draw_blocks/snapshots/oxker__ui__draw_blocks__chart_bandwidth__tests__draw_blocks_charts_running_none.snap
---
source: src/ui/draw_blocks/chart_bandwidth.rs
expression: setup.terminal.backend()
---
"╭─────── rx: 0 kb/s tx: 0 kb/s ────────╮"
"│      │                               │"
"│      │                               │"
"│      │                               │"
"│0 kb/s│                               │"
"│      │                               │"
"│0 kb/s│                               │"
"│      │                               │"
"│      │                               │"
"╰──────────────────────────────────────╯"
