src/ui/draw_blocks/snapshots/oxker__ui__draw_blocks__chart_bandwidth__tests__draw_blocks_charts_running_with_data_rx.snap
---
source: src/ui/draw_blocks/chart_bandwidth.rs
expression: setup.terminal.backend()
---
"╭───── rx: 566.00 kb/s tx: 0 kb/s ─────╮"
"│           │        •                 │"
"│           │      ••                  │"
"│           │     ••                   │"
"│566.00 kb/s│    ••                    │"
"│           │   •                      │"
"│0 kb/s     │  ••                      │"
"│           │••                        │"
"│           │•                         │"
"╰──────────────────────────────────────╯"
